Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-111498

QPainter::drawImage() broken on big images when OpenGL is used

XMLWordPrintable

    • All
    • 55568b8c6 (dev), 84f5dcf4e (6.5)

      QPainter::drawImage(const QPointF &point, const QImage &image, const QRectF &source)
      

      is broken on big images when drawing to a QGraphicsView based on QOpenGLWidget.

      Use the attached example with a big image (my samples are > 8192x8192) to trigger the bug.

        1. opengl_bug.tar.gz
          1 kB
        2. paris_france-mercator.jpg
          paris_france-mercator.jpg
          20.04 MB
        3. screenshot-1.png
          screenshot-1.png
          173 kB
        For Gerrit Dashboard: QTBUG-111498
        # Subject Branch Project Status CR V

            kskau Kristoffer Skau
            tumic Martin Tůma
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes